--- a/songs/package.json
+++ b/songs/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   },
   "devDependencies": {
